2004-11-01  Not Zed  <NotZed@Ximian.com>

	** See bug #68787

	* e-account.c (xml_set_content): check the new val isn't null
	before dereferencing it.
	* e-account.c (xml_set_prop): same here.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): revert the last change.

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): set the default row/col spacings of the
	table.

2004-10-20  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): check for empty trailing sections/pages
	after we exit the main loop.

	* e-plugin.c (e_plugin_get_type): make ~/.eplugins the default
	eplugin location, not ~/.eplug.

2004-10-18  Not Zed  <NotZed@Ximian.com>

	* e-config.h: fix some forward decls.

2004-10-19  JP Rosevear  <jpr@novell.com>

	* e-config.c, e-event.c, e-menu.c, e-plugin.c, e-plugin.h,
	e-popup.c: convert to org.gnome hook names

2004-10-07  Jeffrey Stedfast  <fejj@novell.com>

	* e-passwords.c (ep_ask_password): Use "%s" as the formatter
	argument and msg->prompt as a printf-style argument rather than
	using it as the format string. Fixes bug #67622.

2004-10-12  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ech_check, ech_config_factory, emph_construct_menu):
	setup a "check" handler, page-check/validation callback.

	* e-popup.c (e_popup_new): new method to create a targetless popup
	menu.

2004-10-08  JP Rosevear  <jpr@novell.com>

	* e-plugin.c (ep_load): fix typo

2004-10-08  Not Zed  <NotZed@Ximian.com>

	* e-plugin.c (ep_load): handle wrong root element properly.  From
	David Trowbridge <David.Trowbridge@Colorado.edu>

2004-10-07  Not Zed  <NotZed@Ximian.com>

	* e-plugin.h: Fix the function pointer types!

	* e-plugin.c (epl_invoke): noop if we're disabled, and do some
	lifecycle stuff now, call e_plugin_lib_enable on the module if it
	exists.

2004-10-07  Not Zed  <NotZed@Ximian.com>

	* e-config.c (ec_rebuild): show the toplevel notebook if we
	had to create one, always.
