@@ -1,3 +1,13 @@
+2004-11-03  Not Zed  <NotZed@Ximian.com>
+
+	* e-plugin.c (e_plugin_list_plugins): added helper api to list all
+	plugins.
+	(ep_construct): load authors into new list for them.
+	(e_plugin_register_type): setup disabled list.
+	(ep_construct): dont load the hooks if we're not enabled.
+	(e_plugin_enable): make this a virutal method.
+	(e_plugin_invoke): if we're disabled, noop.
+
 2004-11-01  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #68787
